[package]
name = "leptos-keycloak-auth"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-keycloak-auth"
description = "Secure Leptos applications using Keycloak."
categories = ["web-programming", "api-bindings", "network-programming"]
keywords = ["leptos", "keyclaok", "auth", "oidc", "oauth"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
jsonwebtoken = "9.2.0"
leptos = "0.6.5"
leptos-use = { version = "0.10.1", features = ["serde"] }
leptos_router = "0.6.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
snafu = "0.8.0"
time = { version = "0.3.34", features = ["wasm-bindgen", "serde"] }
tracing = "0.1.40"
url = "2.5.0"
