[package]
name = "leptos-keycloak-auth"
version = "0.3.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-keycloak-auth"
description = "Secure Leptos applications using Keycloak."
categories = ["web-programming", "api-bindings", "network-programming"]
keywords = ["leptos", "keyclaok", "auth", "oidc", "oauth"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
codee = { version = "0.2.0", features = ["json_serde"] }
jsonwebtoken = "9.3.0"
leptos = "0.7.3"
leptos-use = "0.15.2"
leptos_router = "0.7.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
snafu = "0.8.5"
time = { version = "0.3.37", features = ["wasm-bindgen", "serde"] }
tracing = "0.1.41"
url = "2.5.4"
